/*
 *  UCF COP3330 Summer 2021 Application Assignment 1 Solution
 *  Copyright 2021 Fareed Ally
 */

package baseline;

public class Task
{
    public Task(String taskName)
    {
        // Create a new task based on name of task
    }

    public Task(String taskName, String info, String dueDate)
    {
        // Constructor that is used when a new task is created
    }

    private boolean validateDate(String dueDate)
    {
        // Check to see if due date is in the correct format of YYYY-MM-DD
        // Return true if correct
    }

}
