/*
 *  UCF COP3330 Summer 2021 Application Assignment 1 Solution
 *  Copyright 2021 Fareed Ally
 */

package baseline;

import javafx.fxml.FXML;
import javafx.scene.control.Button;

import java.awt.event.ActionEvent;

public class mainMenuController {

    @FXML
    private Button newList;

    @FXML
    private Button viewLists;

    @FXML void newListClicked(ActionEvent event)
    {
        // When the button is clicked, redirect user to newList screen
    }

    @FXML void viewListsClicked(ActionEvent event)
    {
        // When the button is clicked, redirect user to AllToDoLists screen
    }

}